# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
gendiff/: __init__.py
gendiff/formatters/: common.py  formatters.py  json.py  plain.py  stylish.py
gendiff/functions/: arg_parser.py  file_parser.py  generate_diff.py  get_diff.py  get_formatter.py
gendiff/modules/: file_parser.py  generate_diff.py  get_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json.txt
